# patina

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile
.cargo/: config.toml
.github/workflows/: build.yml  desktop.yml
browser/ui/: biome.json  build.sh  index.html  package-lock.json  package.json  vite.config.ts
browser/ui/src/: App.css  App.tsx  index.css  main.tsx
browser/ui/src/components/: CommandPalette.tsx  ConfirmModal.tsx  Dialog.tsx  DirList.tsx  EditorPanel.tsx  EditorToolbar.tsx  ErrorScreen.tsx  GlobalTabs.tsx  LanguageIcon.tsx  LoadingScreen.tsx  MenuBar.tsx  MonacoCell.tsx  NotebookView.tsx  NotificationProvider.tsx  ObjectTreeNode.tsx  OutputCell.tsx  PopupMenu.tsx  ResizibleColumns.tsx  RunTabs.tsx  RunView.tsx  SettingsModal.tsx  StateProvider.tsx  StatusIndicator.tsx  Workspace.tsx  WsProvider.tsx
browser/ui/src/core/: actions.ts  cells.ts  commands.ts  focus.ts  highlighter.ts  jobject.ts  messages.ts  monaco-setup.ts  notebook.ts  state.ts  theme.ts  util.ts
browser/ui/src/types/: prism-core.d.ts
common/: Cargo.toml
common/src/: kernel.rs  lib.rs  messages.rs  protocol.rs  scopes.rs
desktop/: build-python-bundle.sh  build-rust-bundle.sh
desktop/app/: Cargo.toml  README.md  entitlements.plist  prebuild.sh  stage-binaries.sh  tauri.conf.json
desktop/app/capabilities/: default.json
desktop/app/examples/: rust-plotters-polars.tsnb
desktop/app/resources/: .gitignore
desktop/app/resources/python/: .placeholder
desktop/app/src/: main.rs
kernel/: Cargo.toml
kernel-js/: Cargo.toml
kernel-js/src/: executor.rs  main.rs  transpile.rs
kernel-python/: Cargo.toml
kernel-python/src/: executor.rs  main.rs
kernel/examples/: smoke.rs
kernel/src/: executor.rs  main.rs
patina/: Cargo.toml  build.rs
patina/src/: cli.rs  client_messages.rs  convert.rs  http.rs  kernel.rs  lib.rs  notebook.rs  reactor.rs  settings.rs  state.rs  storage.rs  workspace.rs
