[package]
name = "patina-kernel-js"
version = "0.1.0"
edition = "2024"
description = "JavaScript kernel for Patina — evaluates JS cells via the pure-Rust boa engine (no V8)"

[[bin]]
name = "patina-kernel-js"
path = "src/main.rs"

[dependencies]
comm = { path = "../common" }
boa_engine = "0.20"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
