[package]
name = "patina-kernel-js"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "TypeScript kernel for Patina — strips types with oxc, then evaluates the JS via the pure-Rust boa engine (no V8)"

[[bin]]
name = "patina-kernel-js"
path = "src/main.rs"

[dependencies]
comm = { path = "../common" }
boa_engine = "0.20"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
oxc = { version = "0.134.0", features = ["transformer", "codegen", "semantic"] }
