[package]
name = "patina-kernel"
version = "0.1.0"
edition = "2024"
description = "Rust kernel for Patina — evaluates Rust cells via an embedded evcxr context"

[[bin]]
name = "patina-kernel"
path = "src/main.rs"

[dependencies]
comm = { path = "../common" }
evcxr = "0.21"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true, features = ["tokio-io", "sink"] }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Advisory lock on the shared evcxr build dir (so concurrent kernels don't
# corrupt each other's crate files). Unix only; Windows falls back to per-session.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
