[package]
name = "patina"
version = "0.1.0"
edition = "2024"
description = "Patina — a Rust-only interactive notebook"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
nutype = { workspace = true, features = ["serde"] }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true, features = ["tokio-io", "sink"] }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
comm = { path = "../common" }
which = "7.0"
ctrlc = "3.4"
termcolor = "1.4"
toml = "0.8"
jiff = { version = "0.2", features = ["serde"] }
rand = "0.9"
tempfile = "3.20"
